[UVM] Fix extract command